--- a/access.html
+++ b/access.html
@@ -53,10 +53,9 @@
 <div class="accesstitle"></div>
     </div>
     <div class=" access">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3247.553232096646!2d139.41857886378793!3d35.515323930233244!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018fee41b3148c9%3A0xdf3c8c5eb0884e33!2z44CSMjUyLTAwMDEgS2FuYWdhd2Eta2VuLCBaYW1hLXNoaSwgU2FnYW1pZ2Fva2EsIDEgQ2hvbWXiiJIyNOKIkjEzLCDmnbHpgqbjg5Pjg6s!5e0!3m2!1szh-CN!2sjp!4v1505664489673" 
-        width="600" height="450" frameborder="0" style="border:1" allowfullscreen></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d954.8962494821192!2d139.77649296840744!3d35.6745959276547!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018895e7e295c3b%3A0xb246a5ed9843db8c!2z5YWr5LiB5aCA77yI5Lic5Lqs77yJ!5e0!3m2!1szh-CN!2sjp!4v1571640632496!5m2!1szh-CN!2sjp" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
         <div class="address">八丁堀駅Ｂ4出口</div>
-        <div class="station">Ｂ4出口から徒歩4分</div>
+        <div class="station">Ｂ4出口から徒歩2分</div>
         <div class="teleph"><a href="tel://09091546417">Tel:090-9154-6417</a></div>
     </div>
     <div class="end">
@@ -67,4 +66,5 @@
 </body>
 <script src="swiper.min.js"></script>
   <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"> </script>
+  <script src="js/index.js"></script>
 </html>
