--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="navimg" id="nav"></div>
     </div>
     <div class="navLong">
-        <div class="navLongLogo"><a href="tel://09091546417">Tel:090-9154-6417</a></div>
+        <div class="navLongLogo"></div>
         <a href="index.html"><div class="navLong1">ホーム</div></a>
         <a href="system.html"><div class="navLong1">システム</div></a>
         <a href="girl.html"><div class="navLong1">スタッフ</div></a>
@@ -95,14 +95,6 @@
                                 曖昧はＭＡＸレベルの人数を抱えて皆様をお迎えいたします♪
                                 ぜひアダルト気分全開にして夜のお遊びにいらしてくださいませ
                         </div>
-                        <div class="text">
-                                <p>2019年10月21日11：30</p>
-                                <!-- <hr> -->
-                                    曖昧です
-                                    午後はこれから幕開けです～
-                                    曖昧はＭＡＸレベルの人数を抱えて皆様をお迎えいたします♪
-                                    ぜひアダルト気分全開にして夜のお遊びにいらしてくださいませ
-                            </div>
                     </div>
                 </div>
                 <div class="molir">
@@ -113,12 +105,12 @@
         <div class="newsTitle"></div>
         <div class="newsText">
             <div class="text">
-                <p>2019年10月21日11：30</p>
+                <!-- <p>2019年10月21日11：30</p>
                 <hr>
                     曖昧です
                     午後はこれから幕開けです～
                     曖昧はＭＡＸレベルの人数を抱えて皆様をお迎えいたします♪
-                    ぜひアダルト気分全開にして夜のお遊びにいらしてくださいませ
+                    ぜひアダルト気分全開にして夜のお遊びにいらしてくださいませ -->
             </div>
         </div>
     </div>
