--- a/recruit.html
+++ b/recruit.html
@@ -164,4 +164,5 @@
 </body>
 <script src="swiper.min.js"></script>
   <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"> </script>
+  <script src="js/index.js"></script>
 </html>
