--- a/room.html
+++ b/room.html
@@ -94,4 +94,5 @@ cube: {
 </script>
 
   <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"> </script>
+  <script src="js/index.js"></script>
 </html>
