勉强告一段落
额

--- a/index.html
+++ b/index.html
@@ -87,14 +87,14 @@
             <div class="news1">
                     <div class="newsTitle"></div>
                     <div class="newsText">
-                        <div class="text">
+                        <!-- <div class="text">
                             <p>2019年10月21日11：30</p>
-                            <!-- <hr> -->
+                            <hr>
                                 曖昧です
                                 午後はこれから幕開けです～
                                 曖昧はＭＡＸレベルの人数を抱えて皆様をお迎えいたします♪
                                 ぜひアダルト気分全開にして夜のお遊びにいらしてくださいませ
-                        </div>
+                        </div> -->
                     </div>
                 </div>
                 <div class="molir">
