--- a/room.html
+++ b/room.html
@@ -32,6 +32,11 @@
     height: 50px;
     background-image: url(img/roomtitle.png);
 }
+@media screen and (min-width:900px) {
+  .roomtitle{
+    background-size: unset;
+}
+}
 </style>
 <body>
     <div class="nav">
@@ -40,12 +45,12 @@
     </div>
     <div class="navLong">
         <div class="navLongLogo"></div>
-        <div class="navLong1">ホーム</div>
-        <div class="navLong1">システム</div>
-        <div class="navLong1">スタッフ</div>
-        <div class="navLong1">店内風景</div>
-        <div class="navLong1">アクセス</div>
-        <div class="navLong1">リクルート</div>
+        <a href="index.html"><div class="navLong1">ホーム</div></a>
+        <a href="system.html"><div class="navLong1">システム</div></a>
+        <a href="girl.html"><div class="navLong1">スタッフ</div></a>
+        <a href="room.html"><div class="navLong1">店内風景</div></a>
+        <a href="access.html"><div class="navLong1">アクセス</div></a>
+        <a href="recruit.html"><div class="navLong1">リクルート</div></a>
         <div class="navLong2"><a href="tel://09091546417">Tel:090-9154-6417</a></div>
     </div>
     <!-- <div class="navWidth"></div> -->
