--- a/access.html
+++ b/access.html
@@ -18,6 +18,12 @@
     .accesstitle{
     height: 50px;
     background-image: url(img/accesstitle.png);
+    background-size: unset;
+}
+@media screen and (min-width:900px) {
+  .accesstitle{
+    background-size: unset;
+}
 }
   </style>
 <body>
@@ -26,14 +32,14 @@
         <div class="navimg" id="nav"></div>
     </div>
     <div class="navLong">
-        <div class="navLongLogo"></div>
-        <div class="navLong1">ホーム</div>
-        <div class="navLong1">システム</div>
-        <div class="navLong1">スタッフ</div>
-        <div class="navLong1">店内風景</div>
-        <div class="navLong1">アクセス</div>
-        <div class="navLong1">リクルート</div>
-        <div class="navLong2"><a href="tel://09091546417">Tel:090-9154-6417</a></div>
+      <div class="navLongLogo"></div>
+      <a href="index.html"><div class="navLong1">ホーム</div></a>
+      <a href="system.html"><div class="navLong1">システム</div></a>
+      <a href="girl.html"><div class="navLong1">スタッフ</div></a>
+      <a href="room.html"><div class="navLong1">店内風景</div></a>
+      <a href="access.html"><div class="navLong1">アクセス</div></a>
+      <a href="recruit.html"><div class="navLong1">リクルート</div></a>
+      <div class="navLong2"><a href="tel://09091546417">Tel:090-9154-6417</a></div>
     </div>
     <!-- <div class="navWidth"></div> -->
     <div class="top">
