--- a/girl.html
+++ b/girl.html
@@ -15,6 +15,7 @@
         <div class="navimg" id="nav"></div>
     </div>
     <div class="navLong">
+        <div class="navLongLogo"></div>
         <a href="index.html"><div class="navLong1">ホーム</div></a>
         <a href="system.html"><div class="navLong1">システム</div></a>
         <a href="girl.html"><div class="navLong1">スタッフ</div></a>
