--- a/recruit.html
+++ b/recruit.html
@@ -108,7 +108,7 @@
               </tr>
               <tr>
                 <td height="66">勤務地</td>
-                <td>越谷市南越谷４丁目８－８）</td>
+                <td>〒104-0032 東京都中央区八丁堀３丁目</td>
               </tr>
               <tr>
                 <td height="66">応募</td>
@@ -120,7 +120,7 @@
               </tr>
               <tr>
                 <td height="65">電話</td>
-                <td>070-1572-0066</td>
+                <td>090-9154-6417</td>
               </tr>
             </tbody>
           </table>
@@ -136,13 +136,13 @@
                <p>時間&nbsp;</p><p>12:00～Last</p>
           </div>
           <div>
-              <p>資格&nbsp;</p><p>8歳～30歳位まで</p>
+              <p>資格&nbsp;</p><p>18歳～30歳位まで</p>
          </div>
          <div>
             <p>勤務日&nbsp;</p><p>自由</p>
        </div>
        <div>
-          <p>勤務地&nbsp;</p><p>越谷市南越谷４丁目８－８</p>
+          <p>勤務地&nbsp;</p><p>〒104-0032 東京都中央区八丁堀３丁目</p>
        </div>
        <div>
           <p>応募&nbsp;</p><p>お電話の上、お気軽にご来店下さい。</p>
@@ -153,7 +153,7 @@
               ノルマ・罰金一切なし、店内見学&amp;1日体験入店大歓迎</p>
        </div>
        <div>
-          <p>電話&nbsp;</p><p>070-1572-0066</p>
+          <p>電話&nbsp;</p><p>090-9154-64176</p>
        </div>
      </div>
 
