--- a/recruit.html
+++ b/recruit.html
@@ -31,7 +31,10 @@
       border-bottom: 2px salmon solid;
       padding: 5px;
     }
-    
+    .recruittitle{
+    height: 50px;
+    background-image: url(img/recruittitle.png);
+}
   @media screen and (min-width:900px) {
     .recruit{
       border: none;
@@ -44,8 +47,6 @@
     }
   }
   .recruittitle{
-    height: 50px;
-    background-image: url(img/recruittitle.png);
     background-size: unset;
 }
   </style>
