--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>あいまリラクセーション　マッサージ　メンズエステ　リンパマッサージ【あいま】</title>
-<meta name="keywords" content="あいま,エステ，あいまアジア，アロママッサージ,精力回復,ストレス解消,アロマオイル,ボディケア,フットケア" />
-<meta name="description" content="八丁堀駅駅本格アロママッサージ，あいまでございます，オイルマッサージで精力を増強します，仕事のストレスを解消いただきます。" />
+<meta charset="utf-8">
+<title>LORAリラクセーション　マッサージ　メンズエステ　リンパマッサージ【LORA】</title>
+<meta name="keywords" content="LORA,エステ，LORAアジア，アロママッサージ,精力回復,ストレス解消,アロマオイル,ボディケア,フットケア" />
+<meta name="description" content="八丁堀駅駅本格アロママッサージ，LORAでございます，オイルマッサージで精力を増強します，仕事のストレスを解消いただきます。" />
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
   <link rel="stylesheet" href="swiper.min.css">
   <link rel="stylesheet" href="css/nav_top.css">
