--- a/girl.html
+++ b/girl.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  title>ROLAリラクセーション　マッサージ　メンズエステ　リンパマッサージ【ROLA】</title>
+  <title>ROLAリラクセーション　マッサージ　メンズエステ　リンパマッサージ【ROLA】</title>
 <meta name="keywords" content="ROLA,エステ，ROLAアジア，アロママッサージ,精力回復,ストレス解消,アロマオイル,ボディケア,フットケア" />
 <meta name="description" content="八丁堀駅駅本格アロママッサージ，ROLAでございます，オイルマッサージで精力を増強します，仕事のストレスを解消いただきます。" />
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
@@ -43,146 +43,7 @@
     <div class="Titles">
       <div class="stafftitle"></div>
     </div>
-    <div class="staff">
-      <div class="staffBox">
-        <div class="staPhotoffBox">
-            <div class="staBigPhotoffBox">
-              <div class="swiper-container" id="swiper0">
-                 <div class="swiper-wrapper">
-                   <div class="swiper-slide"><img  id="" src="staff/a.jpg" ></div>
-                   <div class="swiper-slide"><img  id="" src="staff/all.jpg"></div>
-                   <div class="swiper-slide"><img  id="" src="staff/all.jpg"></div>
-                 </div>
-              </div>
-            </div>  
-          <div class="staPhotoffBoxSmall">
-            <ul>
-              <li><img  id="" src="staff/a.jpg" ></li>
-              <li><img  id="" src="staff/all.jpg"></li>
-              <li><img  id="" src="staff/all.jpg"></li>
-           </ul>
-          </div> 
-        </div> 
-      <div class="txt">
-            <h2>歩み</h2>
-            <br>
-            <h3>年齢:２２</h3>
-            <br>
-            <h3>3サイズ：B:83　W:56　H：85</h3>
-            <br>
-            <h4>若々しく華やかな雰囲気のイマドキセラピスト！
-              アイドル顔負けのルックス♥明るい性格と礼儀正しい佇まいに第一印象で気に入ること間違いなし！
-              持ち前の人当たりの良さは心地よい距離感となり、
-              リラックスして過ごして頂ける事でしょう♪マッサージは未経験ながらセンス抜群の期待大！
-              癒しのオーラを纏っており、心の隅々まで彼女の魅力に包まれ、至極の世界を味わう事でしょう</h4>
-        </div>  
-       </div> 
-  </div>
-  <div class="staff">
-      <div class="staffBox">
-        <div class="staPhotoffBox">
-            <div class="staBigPhotoffBox">
-              <div class="swiper-container" id="swiper1">
-                 <div class="swiper-wrapper">
-                   <div class="swiper-slide"><img  id="" src="staff/2.jpg" ></div>
-                   <div class="swiper-slide"><img  id="" src="staff/all.jpg"></div>
-                   <div class="swiper-slide"><img  id="" src="staff/all.jpg"></div>
-                 </div>
-              </div>
-            </div>  
-          <div class="staPhotoffBoxSmall">
-            <ul>
-              <li><img  id="" src="staff/2.jpg" ></li>
-              <li><img  id="" src="staff/all.jpg"></li>
-              <li><img  id="" src="staff/all.jpg"></li>
-           </ul>
-          </div> 
-        </div> 
-      <div class="txt">
-            <h2>みお</h2>
-            <br>
-            <h3>年齢:２４</h3>
-            <br>
-            <h3>3サイズ：B:85　W:52　H：87</h3>
-            <br>
-            <h4>若々しく華やかな雰囲気のイマドキセラピスト！
-              アイドル顔負けのルックス♥明るい性格と礼儀正しい佇まいに第一印象で気に入ること間違いなし！
-              持ち前の人当たりの良さは心地よい距離感となり、
-              リラックスして過ごして頂ける事でしょう♪マッサージは未経験ながらセンス抜群の期待大！
-              癒しのオーラを纏っており、心の隅々まで彼女の魅力に包まれ、至極の世界を味わう事でしょう</h4>
-        </div>  
-       </div> 
-  </div>
-  <div class="staff">
-      <div class="staffBox">
-        <div class="staPhotoffBox">
-            <div class="staBigPhotoffBox">
-              <div class="swiper-container" id="swiper2">
-                 <div class="swiper-wrapper">
-                   <div class="swiper-slide"><img  id="" src="staff/3.jpg" ></div>
-                   <div class="swiper-slide"><img  id="" src="staff/all.jpg"></div>
-                   <div class="swiper-slide"><img  id="" src="staff/all.jpg"></div>
-                 </div>
-              </div>
-            </div>  
-          <div class="staPhotoffBoxSmall">
-            <ul>
-              <li><img  id="" src="staff/3.jpg" ></li>
-              <li><img  id="" src="staff/all.jpg"></li>
-              <li><img  id="" src="staff/all.jpg"></li>
-           </ul>
-          </div> 
-        </div> 
-      <div class="txt">
-            <h2>ハナ</h2>
-            <br>
-            <h3>年齢:２１</h3>
-            <br>
-            <h3>3サイズ：B79　W:52　H：83</h3>
-            <br>
-            <h4>若々しく華やかな雰囲気のイマドキセラピスト！
-              アイドル顔負けのルックス♥明るい性格と礼儀正しい佇まいに第一印象で気に入ること間違いなし！
-              持ち前の人当たりの良さは心地よい距離感となり、
-              リラックスして過ごして頂ける事でしょう♪マッサージは未経験ながらセンス抜群の期待大！
-              癒しのオーラを纏っており、心の隅々まで彼女の魅力に包まれ、至極の世界を味わう事でしょう</h4>
-        </div>  
-       </div> 
-  </div>
-  <div class="staff">
-      <div class="staffBox">
-        <div class="staPhotoffBox">
-            <div class="staBigPhotoffBox">
-              <div class="swiper-container" id="swiper3">
-                 <div class="swiper-wrapper">
-                   <div class="swiper-slide"><img  id="" src="staff/4.jpg" ></div>
-                   <div class="swiper-slide"><img  id="" src="staff/all.jpg"></div>
-                   <div class="swiper-slide"><img  id="" src="staff/all.jpg"></div>
-                 </div>
-              </div>
-            </div>  
-          <div class="staPhotoffBoxSmall">
-            <ul>
-              <li><img  id="" src="staff/4.jpg" ></li>
-              <li><img  id="" src="staff/all.jpg"></li>
-              <li><img  id="" src="staff/all.jpg"></li>
-           </ul>
-          </div> 
-        </div> 
-      <div class="txt">
-            <h2>まお</h2>
-            <br>
-            <h3>年齢:２6</h3>
-            <br>
-            <h3>3サイズ：B:85　W:53　H：87</h3>
-            <br>
-            <h4>若々しく華やかな雰囲気のイマドキセラピスト！
-              アイドル顔負けのルックス♥明るい性格と礼儀正しい佇まいに第一印象で気に入ること間違いなし！
-              持ち前の人当たりの良さは心地よい距離感となり、
-              リラックスして過ごして頂ける事でしょう♪マッサージは未経験ながらセンス抜群の期待大！
-              癒しのオーラを纏っており、心の隅々まで彼女の魅力に包まれ、至極の世界を味わう事でしょう</h4>
-        </div>  
-       </div> 
-  </div>
+    <div id="getMyStaff"></div>
     <div class="end">
         <div class="logo"></div>
         <div class="tel"></div>
@@ -191,23 +52,8 @@
 </body>
 <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"> </script>
 <script src="js/index.js"></script>
+<script src="js/girl.js"></script>
 <script> 
       divHeight(2.2,"focus");
-      var mySwiper = new Swiper('#swiper0',{
-      direction : 'horizontal',
-      loop : true
-      })
-      var mySwiper = new Swiper('#swiper1',{
-      direction : 'horizontal',
-      loop : true
-      })
-      var mySwiper = new Swiper('#swiper2',{
-      direction : 'horizontal',
-      loop : true
-      })
-      var mySwiper = new Swiper('#swiper3',{
-      direction : 'horizontal',
-      loop : true
-      })
 </script>
 </html>
