--- a/system.html
+++ b/system.html
@@ -14,6 +14,9 @@
       background-image: url(img/system.png);
     
     }
+    #girlPhoto1{
+      display: none;
+    }
   </style>
 <body>
     <div class="nav">
@@ -34,6 +37,7 @@
     <div class="top">
         <div class="logo"></div>
         <div class="tel"></div>
+        <div id="girlPhoto1"></div>
     </div>
     <div class="focus" id="focus"></div>
     <div class="navLage">
