--- a/room.html
+++ b/room.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>ROLAリラクセーション　マッサージ　メンズエステ　リンパマッサージ【ROLA】</title>
+  <title>ROLA明大前駅リラクセーション　マッサージ　メンズエステ　リンパマッサージ【ROLA】</title>
   <meta name="keywords" content="ROLA,エステ，ROLAアジア，アロママッサージ,精力回復,ストレス解消,アロマオイル,ボディケア,フットケア" />
-  <meta name="description" content="八丁堀駅駅本格アロママッサージ，ROLAでございます，オイルマッサージで精力を増強します，仕事のストレスを解消いただきます。" />
+  <meta name="description" content="明大前駅本格アロママッサージ，ROLAでございます，オイルマッサージで精力を増強します，仕事のストレスを解消いただきます。" />
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
   <link rel="stylesheet" href="swiper.min.css">
   <link rel="stylesheet" href="css/nav_top.css">
@@ -42,7 +42,7 @@
 </style>
 <body>
     <div class="nav">
-        <div class="telephone"><a href="tel://09091546417">Tel:090-9154-6417</a></div>
+        <div class="telephone"><a href="tel://08073218870">Tel:080-7321-8870</a></div>
         <div class="navimg" id="nav"></div>
     </div>
     <div class="navLong">
@@ -53,7 +53,7 @@
         <a href="room.html"><div class="navLong1">店内風景</div></a>
         <a href="access.html"><div class="navLong1">アクセス</div></a>
         <a href="recruit.html"><div class="navLong1">リクルート</div></a>
-        <div class="navLong2"><a href="tel://09091546417">Tel:090-9154-6417</a></div>
+        <div class="navLong2"><a href="tel://08073218870">Tel:080-7321-8870</a></div>
     </div>
     <!-- <div class="navWidth"></div> -->
     <div class="top">
