--- a/recruit.html
+++ b/recruit.html
@@ -148,7 +148,7 @@
               ノルマ・罰金一切なし、店内見学&amp;1日体験入店大歓迎</p>
        </div>
        <div>
-          <p>電話&nbsp;</p><p>090-9154-64176</p>
+          <p>電話&nbsp;</p><p>08073218870</p>
        </div>
      </div>
 
