--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-153847017-3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-153847017-3');
+</script>
 <meta charset="utf-8">
 <title>ROLA 明大前駅リラクセーション　マッサージ　メンズエステ　リンパマッサージ【ROLA】</title>
 <meta name="keywords" content="ROLA,エステ，ROLAアジア，アロママッサージ,精力回復,ストレス解消,アロマオイル,ボディケア,フットケア" />
