--- a/access.html
+++ b/access.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>ROLA明大前駅中央口3分リラクセーション　マッサージ　メンズエステ　リンパマッサージ【ROLA】</title>
-<meta name="keywords" content="ROLA,エステ，ROLAアジア，アロママッサージ,精力回復,ストレス解消,アロマオイル,ボディケア,フットケア" />
-<meta name="description" content="明大前駅中央口3分本格アロママッサージ，ROLAでございます，オイルマッサージで精力を増強します，仕事のストレスを解消いただきます。" />
+  <title>Relux space 中野坂上駅リラクセーション　マッサージ　メンズエステ　リンパマッサージ【Relux space】</title>
+<meta name="keywords" content="Relux space,エステ，Relux spaceアジア，アロママッサージ,精力回復,ストレス解消,アロマオイル,ボディケア,フットケア" />
+<meta name="description" content=" 中野坂上駅本格アロママッサージ，Relux spaceでございます，オイルマッサージで精力を増強します，仕事のストレスを解消いただきます。" />
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
   <link rel="stylesheet" href="swiper.min.css">
   <link rel="stylesheet" href="css/nav_top.css">
@@ -28,20 +28,20 @@
 }
   </style>
 <body>
-    <div class="nav">
-        <div class="telephone"><a href="tel://08073218870">Tel:080-7321-8870</a></div>
-        <div class="navimg" id="nav"></div>
-    </div>
-    <div class="navLong">
-      <div class="navLongLogo"></div>
-      <a href="index.html"><div class="navLong1">ホーム</div></a>
-      <a href="system.html"><div class="navLong1">システム</div></a>
-      <a href="girl.html"><div class="navLong1">スタッフ</div></a>
-      <a href="room.html"><div class="navLong1">店内風景</div></a>
-      <a href="access.html"><div class="navLong1">アクセス</div></a>
-      <a href="recruit.html"><div class="navLong1">リクルート</div></a>
-      <div class="navLong2"><a href="tel://08073218870">Tel:080-7321-s8870</a></div>
-    </div>
+  <div class="nav">
+    <div class="telephone" ><a href="tel://08096671836">Tel:080-9667-1836</a></div>
+    <div class="navimg" id="nav"></div>
+</div>
+<div class="navLong">
+    <div class="navLongLogo"></div>
+    <a href="index.html"><div class="navLong1">ホーム</div></a>
+    <a href="system.html"><div class="navLong1">システム</div></a>
+    <a href="girl.html"><div class="navLong1">スタッフ</div></a>
+    <a href="room.html"><div class="navLong1">店内風景</div></a>
+    <a href="access.html"><div class="navLong1">アクセス</div></a>
+    <a href="recruit.html"><div class="navLong1">リクルート</div></a>
+    <div class="navLong2"><a href="tel://08096671836">Tel:080-9667-1836</a></div>
+</div>
     <!-- <div class="navWidth"></div> -->
     <div class="top">
         <div class="logo"></div>
@@ -60,13 +60,13 @@
 <div class="accesstitle"></div>
     </div>
     <div class=" access">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3241.35121436432!2d139.64836005069543!3d35.66835313818862!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018f3078a4992df%3A0xc09fbf5d8c170111!2z5piO5aSn5YmN!5e0!3m2!1szh-CN!2sjp!4v1575221199170!5m2!1szh-CN!2sjp" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-        <div class="address">明大前駅中央口3分</div>
-        <div class="teleph"><a href="tel://08073218870">Tel:080-7321-8870</a></div>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d608.2280091088345!2d139.68200827726835!3d35.69706757983547!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018f2d02fe11867%3A0xa6636c2172a9c681!2z5Lit6YeO5Z2C5LiK!5e0!3m2!1szh-CN!2sjp!4v1581846583735!5m2!1szh-CN!2sjp" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+        <div class="address">中野坂上駅A2番出口 徒歩1分</div>
+        <div class="teleph"><a href="tel://08096671836">Tel:080-9667-1836</a></div>
     </div>
     <div class="end">
-        <div class="logo"></div>
-        <div class="tel"></div>
+      <div class="footlogo"></div>
+      <div class="foottel"></div>
         <div class="button"></div>
 </div>
 </body>
