--- a/girl.html
+++ b/girl.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>ROLA明大前駅リラクセーション　マッサージ　メンズエステ　リンパマッサージ【ROLA】</title>
-<meta name="keywords" content="ROLA,エステ，ROLAアジア，アロママッサージ,精力回復,ストレス解消,アロマオイル,ボディケア,フットケア" />
-<meta name="description" content=" 明大前駅本格アロママッサージ，ROLAでございます，オイルマッサージで精力を増強します，仕事のストレスを解消いただきます。" />
+  <title>Relux space 中野坂上駅リラクセーション　マッサージ　メンズエステ　リンパマッサージ【Relux space】</title>
+<meta name="keywords" content="Relux space,エステ，Relux spaceアジア，アロママッサージ,精力回復,ストレス解消,アロマオイル,ボディケア,フットケア" />
+<meta name="description" content=" 中野坂上駅本格アロママッサージ，Relux spaceでございます，オイルマッサージで精力を増強します，仕事のストレスを解消いただきます。" />
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
   <link rel="stylesheet" href="swiper.min.css">
   <link rel="stylesheet" href="css/nav_top.css">
@@ -12,20 +12,20 @@
   <script src="swiper.min.js"></script>
   </head>
 <body>
-    <div class="nav">
-        <div class="telephone"><a href="tel://08073218870">Tel:080-7321-8870</a></div>
-        <div class="navimg" id="nav"></div>
-    </div>
-    <div class="navLong">
-        <div class="navLongLogo"></div>
-        <a href="index.html"><div class="navLong1">ホーム</div></a>
-        <a href="system.html"><div class="navLong1">システム</div></a>
-        <a href="girl.html"><div class="navLong1">スタッフ</div></a>
-        <a href="room.html"><div class="navLong1">店内風景</div></a>
-        <a href="access.html"><div class="navLong1">アクセス</div></a>
-        <a href="recruit.html"><div class="navLong1">リクルート</div></a>
-        <div class="navLong2"><a href="tel://08073218870">Tel:080-7321-8870</a></div>
-    </div>
+  <div class="nav">
+    <div class="telephone" ><a href="tel://08096671836">Tel:080-9667-1836</a></div>
+    <div class="navimg" id="nav"></div>
+</div>
+<div class="navLong">
+    <div class="navLongLogo"></div>
+    <a href="index.html"><div class="navLong1">ホーム</div></a>
+    <a href="system.html"><div class="navLong1">システム</div></a>
+    <a href="girl.html"><div class="navLong1">スタッフ</div></a>
+    <a href="room.html"><div class="navLong1">店内風景</div></a>
+    <a href="access.html"><div class="navLong1">アクセス</div></a>
+    <a href="recruit.html"><div class="navLong1">リクルート</div></a>
+    <div class="navLong2"><a href="tel://08096671836">Tel:080-9667-1836</a></div>
+</div>
     <!-- <div class="navWidth"></div> -->
     <div class="top">
         <div class="logo"></div>
@@ -45,8 +45,8 @@
     </div>
     <div id="getMyStaff"></div>
     <div class="end">
-        <div class="logo"></div>
-        <div class="tel"></div>
+      <div class="footlogo"></div>
+      <div class="foottel"></div>
         <div class="button"></div>
 </div>
 </body>
