--- a/room.html
+++ b/room.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Relux space 中野坂上駅リラクセーション　マッサージ　メンズエステ　リンパマッサージ【Relux space】</title>
+  <title>Relux space 八丁堀駅リラクセーション　マッサージ　メンズエステ　リンパマッサージ【Relux space】</title>
 <meta name="keywords" content="Relux space,エステ，Relux spaceアジア，アロママッサージ,精力回復,ストレス解消,アロマオイル,ボディケア,フットケア" />
-<meta name="description" content=" 中野坂上駅本格アロママッサージ，Relux spaceでございます，オイルマッサージで精力を増強します，仕事のストレスを解消いただきます。" />
+<meta name="description" content=" 八丁堀駅本格アロママッサージ，Relux spaceでございます，オイルマッサージで精力を増強します，仕事のストレスを解消いただきます。" />
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
   <link rel="stylesheet" href="swiper.min.css">
   <link rel="stylesheet" href="css/nav_top.css">
