--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
+
   gtag('config', 'UA-153847017-3');
 </script>
 <meta charset="utf-8">
-<title>Rosemary明大前リラクセーション　マッサージ　メンズエステ　リンパマッサージ【Rosemary明大前】</title>
-<meta name="keywords" content="Rosemary明大前,エステ，Rosemary明大前アジア，アロママッサージ,精力回復,ストレス解消,アロマオイル,ボディケア,フットケア" />
-<meta name="description" content=" Rosemary明大前本格アロママッサージ，Rosemary明大前でございます，オイルマッサージで精力を増強します，仕事のストレスを解消いただきます。" />
+<title>Relux space 八丁堀駅リラクセーション　マッサージ　メンズエステ　リンパマッサージ【Relux space】</title>
+<meta name="keywords" content="Relux space,エステ，Relux spaceアジア，アロママッサージ,精力回復,ストレス解消,アロマオイル,ボディケア,フットケア" />
+<meta name="description" content=" 八丁堀駅本格アロママッサージ，Relux spaceでございます，オイルマッサージで精力を増強します，仕事のストレスを解消いただきます。" />
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
   <link rel="stylesheet" href="swiper.min.css">
   <link rel="stylesheet" href="css/nav_top.css">
   <link rel="stylesheet" href="css/index.css">
-  <script src="swiper.min.js"></script>
   </head>
 <body>
     <div class="nav">
@@ -49,7 +49,7 @@
             <div class="navButton"><a href="recruit.html"><img src="img/images/nav_06.png"></a></div>
     </div>
     <div class="girlPhoto" id="girlPhoto1">
-            <div class="swiper-container" id="Swiper99">
+            <div class="swiper-container">
                     <div class="swiper-wrapper" id="girlPhoto">
                             </div>
                     </div>
